--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -861,8 +861,6 @@
     }
    ],
    "source": [
-    "# Remove year and month because they do not have enough information\n",
-    "\n",
     "X = orders_df.drop(['taken'], axis=1)\n",
     "y = orders_df['taken']\n",
     "\n",
@@ -1287,6 +1285,15 @@
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        ('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
+    "        ('preprocessing', preprocessor),\n",
+    "        ('classifier', RandomForestClassifier())\n",
+    "   ]\n",
+    ")\n",
     "\n",
     "parameters = {\n",
     "    'classifier__n_estimators': [100]\n",
