--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "3a981864-eb76-431b-9383-f63ff96914c9",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "29ca58e0-5dc1-4cb9-8c3b-1194ae13da0e",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "a8137e4b-0936-4b53-abe3-b44f860c0cfc",
    "metadata": {},
    "outputs": [],
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "671f57fe-0ffc-486d-a739-08b5045c91d3",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "b72df8cd-94d3-4a46-a857-bf77c0ddd540",
    "metadata": {},
    "outputs": [
@@ -938,90 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "ce316535-ba5f-4d9e-92ba-f044118738d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime\n",
-    "import numpy as np\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "\n",
-    "\n",
-    "class DateTimeTransformer(BaseEstimator, TransformerMixin):\n",
-    "\n",
-    "    def __init__(self, onehot=True):\n",
-    "        self.onehot = onehot \n",
-    "\n",
-    "    def fit(self, X, y=None):\n",
-    "        self.months = 12\n",
-    "        self.days = 30\n",
-    "        self.hours = 24\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X, y=None):\n",
-    "        # This has to be iterative\n",
-    "        res_cols = []\n",
-    "        for column, dtype in X.dtypes.iteritems():\n",
-    "            if dtype != object:\n",
-    "                continue\n",
-    "\n",
-    "            res = []\n",
-    "            for str_date in X[column]:\n",
-    "                # Cast string to datetime\n",
-    "                dt_date = datetime.strptime(str_date, '%Y-%m-%dT%H:%M:%SZ')\n",
-    "                \n",
-    "                # Values\n",
-    "                month = dt_date.month\n",
-    "                day = dt_date.day\n",
-    "                hour = dt_date.hour\n",
-    "                hhalf = int(dt_date.minute >= 30)\n",
-    "                \n",
-    "                # Example: month = 8, day = 30, hour = 0, hhalf = 1\n",
-    "                # [ \n",
-    "                #   0 0 0 0 0 0 0 1 0 0 0 0 \n",
-    "                #   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1\n",
-    "                #   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-    "                #   1\n",
-    "                # ]\n",
-    "                # Build row accordingly\n",
-    "                if self.onehot:\n",
-    "                    row = np.zeros(self.months + self.days + self.hours + 1)\n",
-    "                    row[month - 1] = 1  # Shift -1 because month starts at 1\n",
-    "                    row[self.months + day - 1] = 1  # Shift -1 because day starts at 1\n",
-    "                    row[self.months + self.days + hour]  = 1  # Shift 1 because hour starts at 0\n",
-    "                    row[-1] = hhalf\n",
-    "                else:\n",
-    "                    row = [month, day, hour, hhalf]\n",
-    "\n",
-    "                res.append(row)\n",
-    "\n",
-    "            res_cols.append(res)\n",
-    "\n",
-    "        res_cols = np.array(res_cols).astype(float)\n",
-    "        return np.squeeze(res_cols)\n",
-    "\n",
-    "\n",
-    "class DropSomeColumns(BaseEstimator, TransformerMixin):\n",
-    "\n",
-    "    def __init__(self, cols):\n",
-    "        if not isinstance(cols, list):\n",
-    "            self.cols = [cols]\n",
-    "        else:\n",
-    "            self.cols = cols\n",
-    "\n",
-    "    def fit(self, X, y=None):\n",
-    "        # there is nothing to fit\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, X:pd.DataFrame):\n",
-    "        X = X.copy()\n",
-    "        return X.drop(self.cols, axis=1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "b6ae9a3b-2166-4d32-b5d9-98243806eba4",
    "metadata": {},
    "outputs": [],
@@ -1030,6 +947,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from rappiml.transformers import DateTimeTransformer\n",
     "\n",
     "scaling_features = ['to_user_distance', 'to_user_elevation', 'total_earning']\n",
     "datetime_features = ['created_at']\n",
@@ -1054,16 +972,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "id": "4dac14ee-e0c3-4b3a-b58e-98bccd560407",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
+    "from rappiml.transformers import DropColumnsTransformer\n",
     "\n",
     "pipeline = Pipeline(\n",
     "    steps=[\n",
-    "        ('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
+    "        ('dropcols', DropColumnsTransformer(cols=['store_id', 'order_id'])),\n",
     "        ('preprocessing', preprocessor),\n",
     "        ('classifier', LogisticRegression(max_iter=5000))\n",
     "   ]\n",
@@ -1072,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "id": "159049e9-d8dd-4630-9391-ac64255e71d5",
    "metadata": {},
    "outputs": [
@@ -1080,7 +999,8 @@
      "data": {
       "text/plain": [
        "(0.6716176178615079,\n",
-       " Pipeline(steps=[('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
+       " Pipeline(steps=[('dropcols',\n",
+       "                  DropColumnsTransformer(cols=['store_id', 'order_id'])),\n",
        "                 ('preprocessing',\n",
        "                  ColumnTransformer(transformers=[('datetime',\n",
        "                                                   DateTimeTransformer(),\n",
@@ -1093,7 +1013,7 @@
        "                 ('classifier', LogisticRegression(C=10, max_iter=5000))]))"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "id": "5637f9ee-3ee7-43cf-a538-ea239f559ae2",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1042,7 @@
        "0.6750221629044417"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "id": "23040d83-16fb-4b09-ba0a-732184287344",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1070,7 @@
     "\n",
     "pipeline = Pipeline(\n",
     "    steps=[\n",
-    "        ('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
+    "        ('dropcols', DropColumnsTransformer(cols=['store_id', 'order_id'])),\n",
     "        ('preprocessing', preprocessor),\n",
     "        ('classifier', RandomForestClassifier())\n",
     "   ]\n",
@@ -1159,15 +1079,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "id": "4cbafa93-f96b-4e2f-9844-53fbc9ad8463",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7042179910967142,\n",
-       " Pipeline(steps=[('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
+       "(0.7041407051629414,\n",
+       " Pipeline(steps=[('dropcols',\n",
+       "                  DropColumnsTransformer(cols=['store_id', 'order_id'])),\n",
        "                 ('preprocessing',\n",
        "                  ColumnTransformer(transformers=[('datetime',\n",
        "                                                   DateTimeTransformer(),\n",
@@ -1180,7 +1101,7 @@
        "                 ('classifier', RandomForestClassifier())]))"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,17 +1120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "id": "f9a0f290-5c77-4287-85b3-a5c8eee1c070",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7002480857233295"
+       "0.7038507008713792"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "id": "63513a2c-a580-4ec9-a364-1859146b4736",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1151,7 @@
        "{'classifier__n_estimators': 100}"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,28 +1178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "id": "ab7f28be-ff57-4461-ab70-392489213f03",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7022347049582935,\n",
-       " Pipeline(steps=[('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
-       "                 ('preprocessing',\n",
-       "                  ColumnTransformer(transformers=[('datetime',\n",
-       "                                                   DateTimeTransformer(),\n",
-       "                                                   ['created_at']),\n",
-       "                                                  ('continuous',\n",
-       "                                                   StandardScaler(),\n",
-       "                                                   ['to_user_distance',\n",
-       "                                                    'to_user_elevation',\n",
-       "                                                    'total_earning'])])),\n",
-       "                 ('classifier', RandomForestClassifier())]))"
+       "Pipeline(steps=[('dropcols',\n",
+       "                 DropColumnsTransformer(cols=['store_id', 'order_id'])),\n",
+       "                ('preprocessing',\n",
+       "                 ColumnTransformer(transformers=[('datetime',\n",
+       "                                                  DateTimeTransformer(),\n",
+       "                                                  ['created_at']),\n",
+       "                                                 ('continuous',\n",
+       "                                                  StandardScaler(),\n",
+       "                                                  ['to_user_distance',\n",
+       "                                                   'to_user_elevation',\n",
+       "                                                   'total_earning'])])),\n",
+       "                ('classifier', RandomForestClassifier())])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1210,7 @@
     "\n",
     "pipeline = Pipeline(\n",
     "    steps=[\n",
-    "        ('dropcols', DropSomeColumns(cols=['store_id', 'order_id'])),\n",
+    "        ('dropcols', DropColumnsTransformer(cols=['store_id', 'order_id'])),\n",
     "        ('preprocessing', preprocessor),\n",
     "        ('classifier', RandomForestClassifier())\n",
     "   ]\n",
@@ -1299,19 +1220,8 @@
     "    'classifier__n_estimators': [100]\n",
     "}\n",
     "\n",
-    "clf = GridSearchCV(pipeline, parameters, scoring='roc_auc')\n",
-    "clf.fit(X_train, y_train)\n",
-    "clf.best_score_, clf.best_estimator_\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "5e2d2387-4d60-4ed3-98f6-ff85ff83276d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_model = clf.best_estimator_"
+    "pipeline.fit(X_train, y_train)\n",
+    "pipeline\n"
    ]
   },
   {
@@ -1324,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "id": "3d4af095-195c-4e48-9ab6-5d19ec464344",
    "metadata": {},
    "outputs": [],
@@ -1333,7 +1243,7 @@
     "import mlflow.sklearn\n",
     "\n",
     "mlflow.sklearn.save_model(\n",
-    "    best_model,\n",
+    "    pipeline,\n",
     "    path=\"../models/orders\",\n",
     "    serialization_format=mlflow.sklearn.SERIALIZATION_FORMAT_CLOUDPICKLE\n",
     ")\n"
